<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:layout_margin="@dimen/_20sdp"
    android:orientation="vertical"
    android:layout_gravity="center">

    <ImageView
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_gravity="center"
        android:src="@drawable/ic_android"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/kurril"/>

    <EditText
        android:id="@+id/et_email_login"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_email_login"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_35sdp"
        android:padding="@dimen/_20sdp"
        android:drawableStart="@drawable/ic_email_black_24dp"
        android:drawablePadding="@dimen/_10sdp"
        android:background="@drawable/bg_edit_text"/>

    <EditText
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/hint_pass_login"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:padding="@dimen/_20sdp"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="@dimen/_10sdp"
        android:background="@drawable/bg_edit_text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:text="@string/forgot_password"
        android:layout_gravity="right"
        android:fontFamily="sans-serif-medium"
        android:layout_marginTop="@dimen/_20sdp"
        android:textSize="15sp"
        android:layout_marginEnd="@dimen/_20sdp"/>

    <Button
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_button"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="@dimen/_10sdp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/_20sdp"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_account"
            android:textColor="@color/colorBlack"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_register"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"
            android:layout_marginStart="@dimen/_5sdp"/>


    </LinearLayout>









</LinearLayout>